--- a/OnePiece/index.html
+++ b/OnePiece/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Piece Card War v1.4</title>
+    <title>One Piece Card War</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png">
