Update round display format in index.html

--- a/OnePiece/index.html
+++ b/OnePiece/index.html
@@ -432,7 +432,7 @@
                     <div class="score-display">Score: <span id="player1-score">0</span></div>
                 </div>
                 <div class="round-info">
-                    <p>Round <span id="round-number">1</span>/5</p>
+                    <p>Round <span id="round-number">1</span>/<span id="max-rounds">5</span></p>
                 </div>
                 <div class="player-info" id="player2-info">
                     <h3 id="player2-name">Player 2</h3>
