Update profile buttons and mode descriptions

--- a/OnePiece/index.html
+++ b/OnePiece/index.html
@@ -47,7 +47,7 @@
             <h1>⚔️ One Piece Card War ⚔️</h1>
             <div class="login-options">
                 <button id="guest-btn" class="btn btn-primary">Play as Guest</button>
-                <button id="claim-profile-btn" class="btn btn-secondary">Claim Profile</button>
+                <button id="create-profile-btn" class="btn btn-secondary">Create Profile</button>
                 <button id="login-btn" class="btn btn-secondary">Login to Profile</button>
             </div>
             <div id="profile-form" class="hidden">
@@ -246,7 +246,7 @@
             <div class="team-mode-selection">
                 <div class="mode-card" id="davy-back-mode">
                     <h3>🏴‍☠️ Davy Back Fight</h3>
-                    <p class="mode-description">Balanced team composition</p>
+                    <p class="mode-description">High risk, high reward</p>
                     <div class="role-list">
                         <span class="role-badge captain">Captain (×2.0)</span>
                         <span class="role-badge vice">Vice-Captain (×1.5)</span>
@@ -260,7 +260,7 @@
                 
                 <div class="mode-card" id="classic-pirate-mode">
                     <h3>💀 Classic Pirate</h3>
-                    <p class="mode-description">High risk, high reward</p>
+                    <p class="mode-description">Balanced team composition</p>
                     <div class="role-list">
                         <span class="role-badge captain">Captain (×2.0)</span>
                         <span class="role-badge vice">Vice-Captain (×1.5)</span>
