--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="description" content="Papagna project timeline website">
-        <meta name="keywords" content="resume, portfolio, rpeepz, timeline">
+        <meta name="description" content="Robert Papagna — portfolio and online resume featuring marine engineering work history, certifications, and projects.">
+        <meta name="keywords" content="resume, portfolio, marine engineering, yacht engineer, rpeepz, timeline">
         <meta name="author" content="Robert Papagna">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="canonical" href="https://rpeepz.github.io/">
+        <meta property="og:title" content="Robert Papagna | Portfolio & Resume">
+        <meta property="og:description" content="Marine engineering and technical portfolio with work history, certifications, and projects.">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://rpeepz.github.io/">
+        <meta property="og:image" content="https://rpeepz.github.io/IMG_5217.jpg">
+        <meta property="og:site_name" content="Robert Papagna">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Robert Papagna | Portfolio & Resume">
+        <meta name="twitter:description" content="Marine engineering and technical portfolio with work history, certifications, and projects.">
+        <meta name="twitter:image" content="https://rpeepz.github.io/IMG_5217.jpg">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="gallery.css">
         <link rel="icon" type="image/svg+xml" href="logo.svg">
@@ -27,6 +41,9 @@
             </div>
             <div id="name-header">Robert Papagna</div>
             <div id="name-subheader">Portfolio and online resume</div>
+            <div class="theme-toggle">
+                <button id="theme-toggle" type="button" aria-pressed="false">Dark mode</button>
+            </div>
             <div id="filter-panel">
                 <div class="sidebar-h1">Filter Category</div>
 <!-- 
@@ -74,6 +91,11 @@
             <div class="hide-when-print" id="javascript-disabled">
                 The interactive features of this site require javascript.
             </div>
+            <div class="hero-actions">
+                <div class="cta-buttons">
+                    <a class="btn btn-primary" href="./rpcv.pdf" target="_blank" rel="noopener">Download Resume (PDF)</a>
+                </div>
+            </div>
             <h1>Contact</h1>
             <!-- <div class="expandable-section" id="history"> -->
                 <!-- <div class="expandable-section-clicktoexpand" id="hidden-inline">Click to expand...</div> -->
@@ -84,8 +106,8 @@
                                 <td><span class="contact-data">Fort Lauderdale, FL</span></td></tr>
                             <tr><td><span class="contact-label">Other Locations</span></td>
                                 <td><span class="contact-data">Bay Area, CA</span></td></tr>
-                            <tr><td><span class="contact-label">Cell</span></td>
-                                <td><span class="contact-data">(Removed)</span></td></tr>
+                            <tr><td><span class="contact-label">Phone</span></td>
+                                <td><span class="contact-data">Available on request</span></td></tr>
                             <tr><td><span class="contact-label">Email</span></td>
                                 <td><span class="contact-data">r.papagna@gmail.com</span></td></tr>
                             <tr><td><span class="contact-label">GitHub</span></td>
@@ -93,6 +115,7 @@
                             <tr><td><span class="contact-label">LinkedIn</span></td>
                                 <td><span class="contact-data"><a href="https://www.linkedin.com/in/rpapagna-510/">linkedin.com/rpapagna</a></span></td></tr>
                         </table>
+                        <div class="references-note">References available on request.</div>
                     </div>
                 <!-- </div> -->
             <!-- </div> -->
@@ -112,7 +135,7 @@
                             <tr>
                                 <td>
                                     <!-- hover to see the graph by changing the display type -->
-                                    <DIV ONMOUSEOVER="document.getElementById('Logo').style.display='block'" ONMOUSEOUT="document.getElementById('Logo').style.display='none'">
+                                    <DIV ONMOUSEOVER="document.getElementById('Logo').style.display='none'" ONMOUSEOUT="document.getElementById('Logo').style.display='none'">
                                         <span class="ed-degree">
                                             42 Cadet Level 10 (Comp.Sci)
                                         </span>
@@ -162,9 +185,9 @@
                                                 <g class="highcharts-series-group"><path fill="#00BABC" fill-opacity="0.25" d="M 0 0"></path><g class="highcharts-series highcharts-series-0" transform="translate(10,10) scale(1 1)" clip-path="url(#highcharts-7)">
                                                     <path fill="#AABABC" d="M 204.763632321326 151.10985770119788 L 229.61243752540648 127.41970851351718 L 199 187.5 L 210.652694699151 181.56265549559373 L 212.75047361672293 185.32213893201805 L 199 187.5 L 230.7003414933893 203.65213074854606 L 215.25793169556258 203.75793169556258 L 215.18405195555900 219.26299038962128 L 202.0138077405407 206.52843318677822 L 196.6791480538172 202.15328249054818 L 194.4991098111759 196.33349436871123 L 199 187.5 L 166.10932947820282 204.25863368179188 L 199 187.5 L 167.61002992546076 182.52831715794017 L 199 187.5 L 199 187.5 L 180.5495423465225 151.28893797790712 L 196.28317331418413 170.34663139732038 L 204.76363232132600 151.10985770119788 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5 L 199 187.5" fill-opacity="0.75"></path>
                                                     <path fill="none"    d="M 204.763632321326 151.10985770119788 L 229.61243752540648 127.41970851351718 L 199 187.5 L 210.652694699151 181.56265549559373 L 212.75047361672293 185.32213893201805 L 199 187.5 L 230.7003414933893 203.65213074854606 L 215.25793169556258 203.75793169556258 L 215.18405195555900 219.26299038962128 L 202.0138077405407 206.52843318677822 L 196.6791480538172 202.15328249054818 L 194.4991098111759 196.33349436871123 L 199 187.5 L 166.10932947820282 204.25863368179188 L 199 187.5 L 167.61002992546076 182.52831715794017 L 199 187.5 L 199 187.5 L 180.5495423465225 151.28893797790712 L 196.28317331418413 170.34663139732038 L 204.76363232132600 151.10985770119788 L 204.763632321326 151.10985770119788" stroke="#00BABC" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"></path>
-                                                    <path fill="none"    d="M 194.763632321326 151.10985770119788 L 204.76363232132600 151.10985770119788 L 229.61243752540648 127.41970851351718 L 199 187.5 L 210.65269469915100 181.56265549559373 L 212.75047361672293 185.32213893201805 L 199 187.5 L 230.70034149338930 203.65213074854606 L 215.25793169556258 203.75793169556258 L 215.1840519555590 219.26299038962128 L 202.0138077405407 206.52843318677822 L 196.6791480538172 202.15328249054818 L 194.4991098111759 196.33349436871123 L 199 187.5 L 166.10932947820282 204.25863368179188 L 199 187.5 L 167.61002992546076 182.52831715794017 L 199 187.5 L 199 187.5 L 180.54954234652250 151.28893797790712 L 196.28317331418413 170.34663139732038 L 204.763632321326 151.10985770119788 L 204.763632321326 151.10985770119788 L 214.763632321326 151.10985770119788" stroke-linejoin="round" visibility="visible" stroke="rgba(192,192,192,0.0001)" stroke-width="22" class=" highcharts-tracker" style=""></path>
+                                                    <path fill="none"    d="M 194.763632321326 151.10985770119788 L 204.76363232132600 151.10985770119788 L 229.61243752540648 127.41970851351718 L 199 187.5 L 210.65269469915100 181.56265549559373 L 212.75047361672293 185.32213893201805 L 199 187.5 L 230.70034149338930 203.65213074854606 L 215.25793169556258 203.75793169556258 L 215.1840519555590 219.26299038962128 L 202.0138077405407 206.52843318677822 L 196.6791480538172 202.15328249054818 L 194.4991098111759 196.33349436871123 L 199 187.5 L 166.10932947820282 204.25863368179188 L 199 187.5 L 167.61002992546076 182.52831715794017 L 199 187.5 L 199 187.5 L 180.54954234652250 151.28893797790712 L 196.28317331418413 170.34663139732038 L 204.763632321326 151.10985770119788 L 204.763632321326 151.10985770119788 L 214.763632321326 151.10985770119788" stroke-linejoin="round" visibility="visible" stroke="rgba(192,192,192,0.0001)" stroke-width="22" class=" highcharts-tracker" ></path>
                                         </g>
-                                        <g class="highcharts-markers highcharts-series-0 highcharts-tracker" transform="translate(10,10) scale(1 1)" style="" clip-path="none"><path fill="#00BABC" d="M 230 197.65213074854606 C 237.992 197.65213074854606 237.992 209.65213074854606 230 209.65213074854606 C 222.008 209.65213074854606 222.008 197.65213074854606 230 197.65213074854606 Z" stroke="#FFFFFF" stroke-width="1" visibility="hidden"></path></g></g>
+                                        <g class="highcharts-markers highcharts-series-0 highcharts-tracker" transform="translate(10,10) scale(1 1)" clip-path="none"><path fill="#00BABC" d="M 230 197.65213074854606 C 237.992 197.65213074854606 237.992 209.65213074854606 230 209.65213074854606 C 222.008 209.65213074854606 222.008 197.65213074854606 230 197.65213074854606 Z" stroke="#FFFFFF" stroke-width="1" visibility="hidden"></path></g></g>
                                         <g class="highcharts-axis-labels highcharts-xaxis-labels">
                                             <text x="234.90945827228825" style="color:#333;cursor:default;font-size:8px;width:9px;min-width:50px;fill:#333;text-overflow:clip;" transform="translate(0,0)" text-anchor="middle" y="25.906306088930307" opacity="1">
                                                 <tspan>Adaptation</tspan>
@@ -254,7 +277,51 @@
                 </div>
             </div>
                 
-            <h1>Certification</h1>
+                    <h1>Skills &amp; Tools</h1>
+                    <div class="expandable-section" id="skills">
+                        <div class="expandable-section-clicktoexpand" id="hidden-inline">Click to expand...</div>
+                        <div class="expandable-section-expandedtext" id="expanded">
+                            <div class="col-lg-6 col-sm-12 fixed-height">
+                                <h3>Skills Matrix</h3>
+                                <div class="container-inner-item boxed hide-overflow">
+                                    <div class="skills-matrix">
+                                        <div class="skills-row">
+                                            <div class="skills-domain">Marine Engineering</div>
+                                            <div class="skills-items">Diesel engines, generators, HVAC, hydraulics</div>
+                                            <div class="skills-years">8+ yrs</div>
+                                        </div>
+                                        <div class="skills-row">
+                                            <div class="skills-domain">Maintenance &amp; Refit</div>
+                                            <div class="skills-items">Planned maintenance, troubleshooting, shipyard coordination</div>
+                                            <div class="skills-years">7+ yrs</div>
+                                        </div>
+                                        <div class="skills-row">
+                                            <div class="skills-domain">Deck Ops &amp; Navigation</div>
+                                            <div class="skills-items">Watchkeeping, docking, passage planning, tender ops</div>
+                                            <div class="skills-years">5+ yrs</div>
+                                        </div>
+                                        <div class="skills-row">
+                                            <div class="skills-domain">Mechanical &amp; Electrical</div>
+                                            <div class="skills-items">Systems diagnosis, wiring, pumps, motors, controls</div>
+                                            <div class="skills-years">6+ yrs</div>
+                                        </div>
+                                        <div class="skills-row">
+                                            <div class="skills-domain">Software &amp; Web</div>
+                                            <div class="skills-items">JavaScript, HTML/CSS, Git, Linux</div>
+                                            <div class="skills-years">5+ yrs</div>
+                                        </div>
+                                        <div class="skills-row">
+                                            <div class="skills-domain">Tools</div>
+                                            <div class="skills-items">Onshape CAD, Arduino, diagnostics, documentation</div>
+                                            <div class="skills-years">4+ yrs</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <h1>Certification</h1>
             <!-- <div class="certification-highlight">
                 <a id="2ndEng_cv" href="./rpcv.pdf" target="blank">2nd Engineer CV (pdf)</a>
             </div> -->
@@ -288,7 +355,7 @@
             <div class="expandable-section" id="history">
                 <div class="expandable-section-clicktoexpand" id="hidden-inline">Click to expand...</div>
                 <div class="expandable-section-expandedtext" id="expanded">
-                    <span id="job-history-subheader">Sorted by start date, most recent first. May include volunteer positions and professional associations as noted. All references ok to contact.</span>
+                    <span id="job-history-subheader">Sorted by start date, most recent first. May include volunteer positions and professional associations as noted. References available on request.</span>
                     <!-- <span id="job-filter-text">Current Filter: *Custom*</span> -->
                     <div class="job-entry" data-tags="engineering,refit-maintenance,logistics">
                         <span class="job-title">3rd Engineer</span>
